Fix colour not showing on selected players

--- a/panorama/styles/modules/picking_player.css
+++ b/panorama/styles/modules/picking_player.css
@@ -10,11 +10,17 @@
 	margin: 3px;
 }
 
-#PlayerAvatar {
-	width: 80px;
-	height: 80px;
-	z-index: 1;
+#HeroColorContainer {
 	horizontal-align: center;
+	z-index: 1;
+	background-color: black;
+	margin-bottom: 20px;
+}
+
+#HeroFactionAvatar {
+	width: 100px;
+	height: 100px;
+	margin: 5px;
 }
 
 #HeroPanel {
